--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,12 +1,21 @@
-name: ci-nestjs-workflow
-on: [push]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 jobs:
-  check-application:
+  build:
     runs-on: ubuntu-latest
-    steps:
-      - use: actions/checkout@v2
-      - use: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm test
-      - run: npm start
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x, 16.x]
+steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+    uses: actions/setup-node@v2
+    with:
+      node-version: ${{ matrix.node-version }}
+      cache: 'npm'
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
