--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,21 +1,19 @@
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+name: ci-nestjs-workflow
+on: [push]
 jobs:
-  build:
+  check-application:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [12.x, 14.x, 16.x]
-steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-    uses: actions/setup-node@v2
-    with:
-      node-version: ${{ matrix.node-version }}
-      cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
+    
